# channelbot

./: .env.example  .gitignore  Dockerfile  README.md  admins.json.example  config.yaml.example  docker-compose.yml  fa.json  pyproject.toml
app/: bot.py
app/handlers/: admin.py  callback.py  user.py
app/keyboards/: inline.py  menu.py
app/middlewares/: acl.py  throttling.py
app/services/: broadcaster.py  storage.py
app/states/: admin_states.py  user_states.py
app/utils/: message_helpers.py
tests/: test_storage.py
