[tool.poetry]
name = "telegram-management-bot"
version = "1.0.0"
description = "A Telegram channel and group management bot."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
aiogram_media_group = "^1.2.1" # <-- CORRECTED: underscore instead of dash

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"